--- a/src/main/resources/templates/listproject.html
+++ b/src/main/resources/templates/listproject.html
@@ -29,7 +29,7 @@
 	<h1>List of projects</h1>
 	<table class="table table-bordered table-striped">
 		<caption>List of projects</caption>
-		<thead>
+		<thead class="thead-dark">
 			<tr>
 				<th scope="col">Name</th>
 				<th scope="col">Description</th>
