--- a/src/main/resources/templates/viewproject.html
+++ b/src/main/resources/templates/viewproject.html
@@ -43,6 +43,7 @@
 	<div th:if="${person.role.name == 'ROLE_USER'}">
 		<div th:replace="usermenu :: header"></div>
 	</div>
+	<h1>View project</h1>
 	<div layout:fragment="content" class="container">
 		<div class="alert alert-success" th:if="${globalMessage}"
 			th:text="${globalMessage}">Some Success message</div>
@@ -119,13 +120,15 @@
 			</dl>
 		</div>
 		<div th:if="${person.role.name == 'ROLE_ADMIN'}">
-			<div class="pull-left">
-				<a href="formproject.html"
-					th:href="@{'/project/viewmodify/' + ${project.id}}"> <span
-						class="material-icons">mode_edit</span></a>|
+			<div
+				class="col form-actions col-xs-offset-2 col-xs-10 submit-create-user-form">
+				<a href="formperson.html"
+					th:href="@{'/project/viewmodify/' + ${viewproject.id}}"> <span
+					class="btn btn-primary input-submit-create-user material-icons">mode_edit</span></a>
 				<a href="persons"
-					th:href="@{'/project/delete/' + ${project.id}}"> <span
-						class="material-icons md-36">delete</span></a>
+					th:href="@{'/project/delete/' + ${viewproject.id}}"> <span
+					class="btn btn-primary input-submit-create-user material-icons md-36">delete</span>
+				</a>
 			</div>
 		</div>
 	</div>
