--- a/src/main/resources/templates/formperson.html
+++ b/src/main/resources/templates/formperson.html
@@ -117,20 +117,23 @@
 						</select>
 					</div>
 				</div>
+				<div class="col form-group">
 				<div th:if="${!projects.isEmpty}">
 					<div class="form-group"
 						th:classappend="${#fields.hasErrors('projects')} ? 'has-error'">
 						<label class="control-label col-xs-2" for="projects"><strong>Projects</strong></label>
 						<div class="col-xs-10">
 							<select th:field="*{projects}" multiple="multiple" />
-							<option th:each="project : ${projects}" th:value="${{project}}"
-								th:text="${project.name}" th:selected="${true}"></option>
 							<option th:each="project : ${projectselected}"
-								th:value="${{project}}" th:text="${project.name}"></option>
+									th:value="${project.id}"
+									th:text="${project.name}" selected></option>
+							<option th:each="project : ${projects}"
+									th:value="${project.id}"
+									th:text="${project.name}"></option>																						
 							</select>
 						</div>
 					</div>
-				</div>
+				</div></div>
 			</div>
 			<div class="col form-actions col-xs-offset-2 col-xs-10 submit-create-user-form">
 				<input type="submit" class="btn btn-primary input-submit-create-user" value="Save" />
