--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,41 +1,55 @@
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" 
-xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="en">
 
 <head>
-    <title>Login Page</title>
+<title>Login Page</title>
 
-    <link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css}"
+<link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css}"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 </head>
 <body>
-<div class="container">
-    <h1>Login page</h1>
-    <div th:if="${param.error}" class="alert alert-danger">Invalid username and password.</div>
-    <div th:if="${param.logout}" class="alert alert-danger">You have been logged out.</div>
+	<div th:fragment="header" class="">
+		<nav
+			class="navbar navbar-dark bg-dark navbar-expand-lg navbar-light bg-light">
+			<a class="navbar-brand" th:href="@{/main}">
+		      <img src="/img/logo.png" width="80" height="100" alt="">
+		    </a>
+		</nav>
+	</div>
+	<div class="container">
+		<h1>Login page</h1>
+		<div th:if="${param.error}" class="alert alert-danger">Invalid
+			username and password.</div>
+		<div th:if="${param.logout}" class="alert alert-danger">You have
+			been logged out.</div>
 
-    <form th:action="@{/doLogin}" method="post" class="form-horizontal">
-        <div class="form-group">
-            <label class="control-label col-xs-2" for="user"> User Name: </label>
+		<form th:action="@{/doLogin}" method="post" class="form-horizontal">
+			<div class="form-group">
+				<label class="control-label col-xs-2" for="user"> User Name:
+				</label>
 
-            <div class="col-xs-10">
-                <input id="user" type="text" name="user"/>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label col-xs-2" for="password"> Password: </label>
+				<div class="col-xs-10">
+					<input id="user" type="text" name="user" />
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="control-label col-xs-2" for="password">
+					Password: </label>
 
-            <div class="col-xs-10">
-                <input id="password" type="password" name="password"/>
-            </div>
-        </div>
-        <div class="form-actions col-xs-offset-2 col-xs-10">
-            <input type="submit" class="btn btn-primary" value="Sign In"/>
-        </div>
-    </form>
-</div>
+				<div class="col-xs-10">
+					<input id="password" type="password" name="password" />
+				</div>
+			</div>
+			<div class="form-actions col-xs-offset-2 col-xs-10">
+				<input type="submit" class="btn btn-primary" value="Sign In" />
+			</div>
+		</form>
+	</div>
 
 </body>
 </html>
