--- a/src/main/resources/templates/listtask.html
+++ b/src/main/resources/templates/listtask.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" 
 xmlns:sec="http://www.thymeleaf.org/extras/spring-security" layout:decorator="layout" lang="en">
 <head>
-<title>Users : View all</title>
+<title>Tasks : View all</title>
 </head>
 <body>
     <div th:if="${person.role.name == 'ROLE_ADMIN'}">
