--- a/src/main/resources/templates/listproject.html
+++ b/src/main/resources/templates/listproject.html
@@ -27,6 +27,7 @@
 		<div th:replace="usermenu :: header"></div>
 	</div>
 	<h1>List of projects</h1>
+	<div th:if="${person.role.name == 'ROLE_ADMIN'}">
 	<table class="table table-bordered table-striped">
 		<caption>List of projects</caption>
 		<thead class="thead-dark">
@@ -65,5 +66,39 @@
 			</tr>
 		</tbody>
 	</table>
+	</div>
+	
+	<div th:if="${person.role.name == 'ROLE_USER'}">
+	<table class="table table-bordered table-striped">
+		<caption>List of projects</caption>
+		<thead class="thead-dark">
+			<tr>
+				<th scope="col">Name</th>
+				<th scope="col">Description</th>
+				<th scope="col">Started</th>
+				<th scope="col">Ended</th>
+				<th scope="col"></th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr th:if="${projects.empty}">
+				<td colspan="3">No projects</td>
+			</tr>
+			<tr th:each="project : ${projects}">
+				<td th:text="${project.name}">Name</td>
+				<td th:text="${project.description}"> Description </td>
+				<td
+					th:text="${#calendars.format(#calendars.createForTimeZone(#dates.year(project.startDate), #dates.month(project.startDate), #dates.day(project.startDate),'UTC'), 'yyyy-MMM-dd')}">July
+					11, 2012 2:17:16 PM CDT</td>
+				<td
+					th:text="${#calendars.format(#calendars.createForTimeZone(#dates.year(project.endDate), #dates.month(project.endDate), #dates.day(project.endDate),'UTC'), 'yyyy-MMM-dd')}">July
+					11, 2012 2:17:16 PM CDT</td>
+				<td><a href="viewproject.html"
+					th:href="@{'/project/' + ${project.id}}"><span
+						class="material-icons">visibility</span></a></td>
+			</tr>
+		</tbody>
+	</table>
+	</div>
 </body>
 </html>
