--- a/src/main/resources/templates/formperson.html
+++ b/src/main/resources/templates/formperson.html
@@ -10,21 +10,24 @@
 	th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css}"
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 	crossorigin="anonymous">
-	<style>
-		.create-user-form{
-			width: 74%;
-		}
-		.select-user-form{
-			width: 36%;
-		}
-		.submit-create-user-form{
-			margin-left:36%;
-			margin-top:5%;
-		}
-		.input-submit-create-user{
-			width:15%;
-		}
-	</style>
+<style>
+.create-user-form {
+	width: 74%;
+}
+
+.select-user-form {
+	width: 36%;
+}
+
+.submit-create-user-form {
+	margin-left: 36%;
+	margin-top: 5%;
+}
+
+.input-submit-create-user {
+	width: 15%;
+}
+</style>
 </head>
 <body>
 	<div th:if="${person.role.name == 'ROLE_ADMIN'}">
@@ -38,11 +41,13 @@
 		<form id="personForm" th:action="@{/person/modify}"
 			th:object="${modifyperson}" action="#" method="POST">
 			<div th:if="${#fields.hasErrors('*')}" class="alert alert-error">
-				<p th:each="error : ${#fields.errors('*')}" th:text="${error}"><strong>Validation
-					error</strong></p>
+				<p th:each="error : ${#fields.errors('*')}" th:text="${error}">
+					<strong>Validation error</strong>
+				</p>
 			</div>
 			<input type="hidden" th:field="*{id}"
-				th:class="${#fields.hasErrors('id')} ? 'field-error'" /> <input
+				th:class="${#fields.hasErrors('id')} ? 'field-error'" /> 
+				<input
 				type="hidden" th:field="*{password}"
 				th:class="${#fields.hasErrors('password')} ? 'field-error'" />
 			<div class="row">
@@ -61,16 +66,14 @@
 					</div>
 				</div>
 				<div class="col form-group">
-					<label class="control-label col-xs-2" for="lastname1"><strong>Lastname
-						1</strong></label>
+					<label class="control-label col-xs-2" for="lastname1"><strong>Lastname 1</strong></label>
 					<div class="col-xs-10">
 						<input type="text" th:field="*{lastname1}"
 							th:class="${#fields.hasErrors('lastname1')} ? 'field-error'" />
 					</div>
 				</div>
 				<div class="col form-group">
-					<label class="control-label col-xs-2" for="lastname2"><strong>Lastname
-						2</strong></label>
+					<label class="control-label col-xs-2" for="lastname2"><strong>Lastname 2</strong></label>
 					<div class="col-xs-10">
 						<input type="text" th:field="*{lastname2}"
 							th:class="${#fields.hasErrors('lastname2')} ? 'field-error'" />
@@ -118,25 +121,27 @@
 					</div>
 				</div>
 				<div class="col form-group">
-				<div th:if="${!projects.isEmpty}">
-					<div class="form-group"
-						th:classappend="${#fields.hasErrors('projects')} ? 'has-error'">
-						<label class="control-label col-xs-2" for="projects"><strong>Projects</strong></label>
-						<div class="col-xs-10">
-							<select th:field="*{projects}" multiple="multiple" />
-							<option th:each="project : ${projectsselected}"
-									th:value="${project.id}"
-									th:text="${project.name}" selected></option>
-							<option th:each="project : ${projects}"
-									th:value="${project.id}"
-									th:text="${project.name}"></option>																						
-							</select>
+					<div th:if="${!projects.isEmpty}">
+						<div class="form-group"
+							th:classappend="${#fields.hasErrors('projects')} ? 'has-error'">
+							<label class="control-label col-xs-2" for="projects"><strong>Projects</strong></label>
+							<div class="col-xs-10">
+								<select th:field="*{projects}" multiple="multiple" />
+								<option th:each="project : ${projectsselected}"
+									th:value="${project.id}" th:text="${project.name}" selected></option>
+								<option
+										th:each="project : ${projects}" th:value="${project.id}"
+										th:text="${project.name}"></option>
+								</select>
+							</div>
 						</div>
 					</div>
-				</div></div>
+				</div>
 			</div>
-			<div class="col form-actions col-xs-offset-2 col-xs-10 submit-create-user-form">
-				<input type="submit" class="btn btn-primary input-submit-create-user" value="Save" />
+			<div
+				class="col form-actions col-xs-offset-2 col-xs-10 submit-create-user-form">
+				<input type="submit"
+					class="btn btn-primary input-submit-create-user" value="Save" />
 			</div>
 		</form>
 	</div>
